--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
 
         <activity
             android:name=".view.LoginActivity"
-            android:label="Sign In">
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
@@ -35,15 +35,13 @@
         </activity>
 
         <activity android:name=".view.MainActivity">
-            <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-        <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity
             android:name=".view.RegisterActivity"
-            android:parentActivityName=".view.LoginActivity" />
+            android:parentActivityName=".view.LoginActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
 
 
 
